# cpp_4_sem

./: .gitignore
Lab_3/: main.cpp  shiba.h5  shiba.msh  shiba.xdmf  shiba.xml  shiba_gmshgeometrical.xml
lab_1/: CMakeLists.txt  Shiba.stl  exercise_0.1.cpp  exercise_0.2.cpp  exercise_0.3.cpp  exercise_1.cpp  exercise_2.cpp
lab_1/results/exercise_2/: mesh
lab_2/: CMakeLists.txt  Readme.txt  Shiba.geo  Shiba.stl  cubic2d.cpp  cubic3d.cpp  links.txt  tetr3d.cpp
micro_proj/: CMakeLists.txt  disc.msh  main.cpp  model_generator.cpp  step-18.ccZone.Identifier  stress_test.cc  stress_test.cpp  wheel.msh
micro_proj/.cache/clangd/index/: step-18.cc.7F074815564CC1C9.idx  stress_test.cpp.BBCE6CC158FC7ED7.idx
step-49/: CMakeLists.txt  example  example.msh
step-5/: CMakeLists.txt  model_generator.cpp
